--- a/.gitignore
+++ b/.gitignore
@@ -112,5 +112,5 @@ buildNumber.properties
 # Common working directory
 run/
 
-# config (to get rid of keys
-/main/resources/config.yml
+# all yml files
+*.yml
