--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,11 @@
             <artifactId>JDA</artifactId>
             <version>4.2.0_168</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
